--- a/LacunaExpress/app/build.gradle
+++ b/LacunaExpress/app/build.gradle
@@ -21,4 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('libs/gson-2.3.jar')
+    compile files('libs/gson-2.3-javadoc.jar')
 }
