Updated tons of stuff. Having an error though on line 91 of the ModifyActivity class. Not sure wha the problem is. Any ideas Jazz

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -54,6 +54,12 @@
     	    android:label="@string/app_name" >
         </activity>
         
+    	<!-- This is the Modify Account Info Activity -->
+    	<activity 
+    	    android:name="com.JazzDevStudio.LacunaExpress.ModifyAccount"
+    	    android:label="@string/app_name" >
+        </activity>    	
+        
     	<!-- This is the Accounts Activity -->
     	<activity 
     	    android:name="com.JazzDevStudio.LacunaExpress.Accounts"
