--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -66,6 +66,7 @@
     	    android:label="@string/app_name" >
         </activity>    	
     		
+		<!-- Test on 2014-12-07 -->
     <!-- End Application -->
     </application>
     
