--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -11,6 +11,9 @@
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
     
     <!-- Application Declarations -->
     <application
@@ -66,6 +69,13 @@
     	    android:label="@string/app_name" >
         </activity>    	
     		
+    	<!-- This is the Accounts Activity -->
+    	<activity 
+    	    android:name="MISCClasses.UserSettingActivity"
+    	    android:label="@string/app_name" >
+        </activity>        	
+    	
+
     <!-- End Application -->
     </application>
     
