--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -28,7 +28,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -86,7 +85,14 @@
     	    android:name="com.JazzDevStudio.LacunaExpress.SelectMessageActivity"
     	    android:label="@string/app_name" >
         </activity>        	
-        
+
+    	<!-- This is the Activity which handles list view removal, IE, swipe to delete -->
+    	<activity 
+    	    android:name="com.JazzDevStudio.LacunaExpress.ListViewRemoval.ListViewRemovalAnimation"
+    	    android:label="@string/app_name" >
+        </activity>       	
+    	
+    	
     <!-- End Application -->
     </application>
     
