--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ Thumbs.db
 
 # Android Studio
 .idea
+settings.gradle
 #.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
 .gradle
 build/
