--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,11 @@
                 android:resource="@xml/widget_refresh" />
         </receiver>
 
+        <!-- Service -->
+        <service
+            android:name = "com.JazzDevStudio.LacunaExpress.Widget.MailWidgetUpdateService" />
+
+
         <!-- This activity configures the widget -->
         <activity
             android:name="com.JazzDevStudio.LacunaExpress.Widget.MailWidgetConfig"
