--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'net.steamcrafted:load-toast:1.0.5'
 }
